# AstronomyProject

./: .gitignore  CMakeLists.txt  ImageSet.cpp  ImageSet.h  main.cpp
config/: images.txt
